--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -4,3 +4,9 @@ spring:
         authentication:
             username: neo4j
             password: internship-2024
+logging:
+    level:
+        org:
+            springframework:
+                data:
+                    neo4j: DEBUG
